funcionalidad de buscar todos los roles
